<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.senac.pi.controlenota.CadastrarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"/>

    <Button
        style="@style/BtnStyle"
        android:id="@+id/btnCadastrarInstituicao"
        android:text="@string/instituicao"/>

    <Button
        style="@style/BtnStyle"
        android:id="@+id/btnCadastrarTurma"
        android:text="@string/turma"/>

    <Button
        style="@style/BtnStyle"
        android:id="@+id/btnCadastrarAluno"
        android:text="@string/aluno"/>


</LinearLayout>